--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -7,7 +7,7 @@
 /*arreglos generales*/
 body{
 
-    background-color: hsla(276, 62%, 34%, 1);
+    background-color: hsl(276, 62%, 34%);
     background-image: radial-gradient(circle at 96% 61%, hsla(312, 65%, 43%, 1) 7%, transparent 54%), radial-gradient(circle at 35% 15%, rgb(142, 35, 148) 7%, transparent 54%), radial-gradient(circle at 58% 11%, hsla(278, 57%, 53%, 1) 7%, transparent 54%),radial-gradient(circle at 26% 61%, hsla(312, 65%, 43%, 1) 7%, transparent 54%) ;
     background-blend-mode: normal, normal, normal, normal; 
 }
@@ -44,9 +44,14 @@ ul{
 .navegacion{
      padding-inline: 3%;
 }   
-
+.contedor-enlace-menu{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: row;
+    margin-right: 3vw;
+}
 .enlace-menu{
-
     background-color:  rgb(3, 149, 3);
     padding: 15px 10px;
     border: none;
@@ -58,7 +63,6 @@ ul{
     margin-right: 3%;
     font-size: 25px;
     width: 17vw;
-    
 }
 .enlace-menu:active{
     box-shadow: none;
@@ -69,21 +73,30 @@ ul{
     width: 200px;
     height: auto;
 }
+.contenedor-boton-carrito{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 8vh;
+}
 
 .boton-carrito{
-  background-color: aliceblue;
-  padding: 15px 30px;
-  border: none;
-  border-radius: 25px;
-  cursor: pointer;
-  border: 3px solid black;
-  box-shadow: 5px 5px 0px black;
-  margin-left: 5%;
-  margin-right: 3%;
-  font-size: 25px;
-  width: 17vw;
-  text-align: center;
-  display: inline-block;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-color: aliceblue;
+    padding:  15px 30px;
+    border: none;
+    border-radius: 25px;
+    cursor: pointer;
+    border: 3px solid black;
+    box-shadow: 5px 5px 0px black;
+    margin-left: 5%;
+    margin-right: 3%;
+    font-size: 25px;
+    width: 17vw;
+    text-align: center;
+    display: inline-block;
 }
 .boton-carrito:active{
     box-shadow: none;
@@ -101,7 +114,8 @@ ul{
     .menu {
         width: 100%;
         justify-content: center;
-        flex-wrap: wrap;
+        align-items: center;
+        flex-direction: column;
     }
 
     .enlace-menu {
@@ -119,13 +133,19 @@ ul{
         padding: 1vh 10vw;
         margin-top: 7vw;
     }
+   .contenedor-marca{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 96vw;
+    margin-bottom: 1vh;
+   }
 }
 /*main*/
 .catalogo{
     display: grid;
     grid-template-columns: repeat(4, 1fr);
     grid-template-rows: repeat(3, 60ex);
-    grid-gap: 5%;
     justify-items: center;
     align-items: center;
 
@@ -145,6 +165,7 @@ ul{
     background-color: rgb(3, 149, 3) ;
     
 }
+
 .titulos{
     font-size: 50px;
     padding: 20px ; 
@@ -160,23 +181,62 @@ ul{
     font-size: 20px;
     padding-left: 7px;
 }
-.categoria{
-    font-size: 17px;
-    margin: 40px;
-}
+
 .subtitulos{
     font-size: 30px;
     margin: 1%
 }
+.selector{
+    width: 96vw;
+    display: flex;
+    justify-content: start;
+    flex-wrap: wrap;
+    align-items: center;
+    margin-left: 1vw;
+}
+.categoria{
+    font-size: 30px;
+}
+.valores{
+    width: 20vw;
+    height: 7vh;
+    margin: 0 1vw;
+    font-size: 20px;
+}
 
+.boton-selector{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-color: aliceblue;
+    padding: 5px 10px;
+    border: none;
+    border-radius: 25px;
+    cursor: pointer;
+    border: 3px solid black;
+    box-shadow: 5px 5px 0px black;
+    font-size: 25px;
+    width: 10vw;
+    text-align: center;
+    display: inline-block;
+}
+.boton-selector:active{
+    box-shadow: none;
+    transform: translate(5px, 5px);
+}
 @media (max-width: 768px){
     .catalogo{
         grid-template-columns: 1fr;
-        margin-top: 30%;
+        margin-top: 10vh;
         grid-gap: 3vh;
     }
-    .gif{
-        width: 120px;
+    .contenedor-gif{
+        
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        width: 96vw;
+        margin-top: 1vh ;
     }
     .producto{
         display: flex;
@@ -185,39 +245,89 @@ ul{
         margin: 0;
     }
     .titulos{
-        font-size:  30px;
+        font-size: 35px;
+        padding: 1vw 1vh;
     }
     .imagen{
         width: 49ex;
         height: 49ex;
     }
     .texto{
-        font-size: 26px;
+        font-size: 25px;
     }
     .categoria{
         font-size: 13px;
     }
     .subtitulos{
-        font-size: 22px;
+        font-size: 27px;
+    }
+    .selector{
+        
+        font-size: 20px;
+    }
+    .categoria{
+        font-size: 23px;
+    }
+    .valores{
+        width: 30vw;
+        height: 5vh;
+        
+    }
+    .boton-selector{
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        padding: 1vh 10vw;
+        margin: 2vh 3vh;
     }
 }
 /*index*/
+.imagen-slider{
+    width: 40ex;
+    height: 40ex;
+    border-radius: 5%;
+}
 .contenedor-slider{
-    width: 100vw;
+    width: 99vw;
     display: flex;
     justify-content: center;
-   align-items: center;
+    align-items: center;
 }
 .slider{
-    width: 99vw;
-    overflow-x: auto;
-    scroll-snap-type: x mandatory;
-    scroll-behavior: smooth;
     display: flex;
     gap: 10px;
     padding: 10px;
+    animation: desplazar 40s linear infinite;
 }
-
+@keyframes desplazar{
+    0% {
+        transform: translateX(0);
+    }
+    100% {
+        transform: translateX(-50%);
+    }
+}
+.catalogo-principal{
+    display: grid;
+    grid-template-columns: repeat(4, 1fr);
+    grid-template-rows: repeat(3, 60ex);
+    justify-items: center;
+    align-items: center;
+}
+@media (max-width: 768px){
+    .catalogo-principal{
+        grid-template-columns: 1fr;
+        margin-top: 10vh;
+        grid-gap: 3vh;
+    }
+    .imagen{
+        width: 49ex;
+        height: 49ex;
+    }
+    .slider{
+        animation:desplazar 20s linear infinite;
+    }
+}
 /*contacto*/
 .informacion-tienda{
     display: flex;
@@ -240,12 +350,7 @@ ul{
     border: 3px;
     border-radius: 10px;
 }
-.vr{
-    width: 2px;
-    height: 100%;
-    background-color: #ccc;
-    margin: 0 20px;
-}
+
 .icono{
     width: 2vw;
     height: 4vh;
@@ -300,13 +405,53 @@ ul{
     box-shadow: none;
     transform: translate(5px, 5px);
 }
+@media (max-width: 768px) {
+    .informacion-tienda{
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+    }
+    .redes-sociales{
+        flex: 0;
+    }
+    .icono{
+        width: 7vw;
+        height: 5vh;
+    }
+    .mapa-tienda{
+        margin-right: 0;
+        margin-bottom: 2vh;
+    }
+    .mapa{
+        width: 95vw;
+    }
+    .red{
+        font-size: 20px;
+    }
+    .libro-de-quejas{
+        margin-top: 1vh;
+    }
+    .descripcion{
+        font-size: 25px;
+    }
+    .libro{
+        width: 89vw;
+    }
+    .boton-formulario{
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        padding: 1vh 10vw;
+        margin-top: 2vh;
+    }
+}
 /*carrito*/
 .carrito {
     width: 100%;
     border-collapse: collapse;
     background: white;
     border-radius: 5px;
-    box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);  
+    box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
 }
 .carrito-head {
     background-color: #4CAF50;
@@ -340,6 +485,34 @@ ul{
     justify-content: end;
     margin: 5%;
 }
+@media (max-width: 768px){
+    .total{
+        display: flex;
+        align-items: center;
+        justify-content: center;
+    }
+    .compra{
+        width: 55vw;
+    }
+    .monto{
+        display: flex;
+        align-items: center;
+        flex-direction: row;
+    }
+    .texto-button{
+        display: flex;
+        align-items: center;
+        flex-direction: row;
+    }
+    .carrito-body{
+        height: 30vh;
+    }
+    .carrito{
+        margin-top: 2vh;
+    }
+}
+    
+
 /*footer*/
 footer{
     background-color: darkgreen;
