--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -1,587 +1,7 @@
-/*reset basico*/
-*{
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-}
-/*arreglos generales*/
-body{
-
-    background-color: hsl(276, 62%, 34%);
-    background-image: radial-gradient(circle at 96% 61%, hsla(312, 65%, 43%, 1) 7%, transparent 54%), radial-gradient(circle at 35% 15%, rgb(142, 35, 148) 7%, transparent 54%), radial-gradient(circle at 58% 11%, hsla(278, 57%, 53%, 1) 7%, transparent 54%),radial-gradient(circle at 26% 61%, hsla(312, 65%, 43%, 1) 7%, transparent 54%) ;
-    background-blend-mode: normal, normal, normal, normal; 
-}
-*{
-    font-family: "Jersey 15", serif;
-    font-weight: 400;
-    font-style: normal;
-    text-decoration: none !important;
-    color: black !important;
-}
-ul{
-    list-style: none;
-    
-}
-
-/*header*/
-.barra{
-    font-size: 40px;
-    background-color: rgb(188, 18, 222);
-    padding: 20px 40px;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    
-
-}
-
-.menu{
-   display: flex;
-   justify-content: end;
-   align-items: center;
-}
-
-.navegacion{
-     padding-inline: 3%;
-}   
-.contedor-enlace-menu{
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    flex-direction: row;
-    margin-right: 3vw;
-}
-.enlace-menu{
-    background-color:  rgb(3, 149, 3);
-    padding: 15px 10px;
-    border: none;
-    border-radius: 25px;
-    cursor: pointer;
-    border: 3px solid black;
-    box-shadow: 5px 5px 0px black;
-    margin-left: 5%;
-    margin-right: 3%;
-    font-size: 25px;
-    width: 17vw;
-}
-.enlace-menu:active{
-    box-shadow: none;
-    transform: translate(5px, 5px);
-}
-
-.marca{
-    width: 200px;
-    height: auto;
-}
-.contenedor-boton-carrito{
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    height: 8vh;
-}
-
-.boton-carrito{
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    background-color: aliceblue;
-    padding:  15px 30px;
-    border: none;
-    border-radius: 25px;
-    cursor: pointer;
-    border: 3px solid black;
-    box-shadow: 5px 5px 0px black;
-    margin-left: 5%;
-    margin-right: 3%;
-    font-size: 25px;
-    width: 17vw;
-    text-align: center;
-    display: inline-block;
-}
-.boton-carrito:active{
-    box-shadow: none;
-    transform: translate(5px, 5px);
-}
-@media (max-width: 768px) {
-    .barra {
-        font-size: 30px;
-        flex-direction: column;
-        align-items: flex-start; 
-        padding: 15px;
-        flex-wrap: wrap;
-    }
-
-    .menu {
-        width: 100%;
-        justify-content: center;
-        align-items: center;
-        flex-direction: column;
-    }
-
-    .enlace-menu {
-        font-size: 20px;
-        width: 70%; 
-        margin-left: 0;
-        margin-right: 0;
-        margin-bottom: 10px; 
-    }
-
-    .boton-carrito {
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        padding: 1vh 10vw;
-        margin-top: 7vw;
-    }
-   .contenedor-marca{
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    width: 96vw;
-    margin-bottom: 1vh;
-   }
-}
-/*main*/
-.catalogo{
-    display: grid;
-    grid-template-columns: repeat(4, 1fr);
-    grid-template-rows: repeat(3, 60ex);
-    justify-items: center;
-    align-items: center;
-
-}
-.gif{
-    display: flex;
-    width: 200px;
-    height: auto;
-    justify-content: right;
-    align-content: baseline;
-    padding-top: 2%;
-}
-.producto{
-    
-    border: 2px solid black;
-    border-radius: 5%;
-    background-color: rgb(3, 149, 3) ;
-    
-}
-
-.titulos{
-    font-size: 50px;
-    padding: 20px ; 
-}
-.imagen{
-    width: 40ex;
-    height: 40ex;
-    border-radius: 5%;
-    
-}
-.texto{
-    
-    font-size: 20px;
-    padding-left: 7px;
-}
-
-.subtitulos{
-    font-size: 30px;
-    margin: 1%
-}
-.selector{
-    width: 96vw;
-    display: flex;
-    justify-content: start;
-    flex-wrap: wrap;
-    align-items: center;
-    margin-left: 1vw;
-}
-.categoria{
-    font-size: 30px;
-}
-.valores{
-    width: 20vw;
-    height: 7vh;
-    margin: 0 1vw;
-    font-size: 20px;
-}
-
-.boton-selector{
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    background-color: aliceblue;
-    padding: 5px 10px;
-    border: none;
-    border-radius: 25px;
-    cursor: pointer;
-    border: 3px solid black;
-    box-shadow: 5px 5px 0px black;
-    font-size: 25px;
-    width: 10vw;
-    text-align: center;
-    display: inline-block;
-}
-.boton-selector:active{
-    box-shadow: none;
-    transform: translate(5px, 5px);
-}
-@media (max-width: 768px){
-    .catalogo{
-        grid-template-columns: 1fr;
-        margin-top: 10vh;
-        grid-gap: 3vh;
-    }
-    .contenedor-gif{
-        
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        width: 96vw;
-        margin-top: 1vh ;
-    }
-    .producto{
-        display: flex;
-        justify-content: center;
-        width: 81%;
-        margin: 0;
-    }
-    .titulos{
-        font-size: 35px;
-        padding: 1vw 1vh;
-    }
-    .imagen{
-        width: 49ex;
-        height: 49ex;
-    }
-    .texto{
-        font-size: 25px;
-    }
-    .categoria{
-        font-size: 13px;
-    }
-    .subtitulos{
-        font-size: 27px;
-    }
-    .selector{
-        
-        font-size: 20px;
-    }
-    .categoria{
-        font-size: 23px;
-    }
-    .valores{
-        width: 30vw;
-        height: 5vh;
-        
-    }
-    .boton-selector{
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        padding: 1vh 10vw;
-        margin: 2vh 3vh;
-    }
-}
-/*index*/
-.imagen-slider{
-    width: 40ex;
-    height: 40ex;
-    border-radius: 5%;
-}
-.contenedor-slider{
-    width: 99vw;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-}
-.slider{
-    display: flex;
-    gap: 10px;
-    padding: 10px;
-    animation: desplazar 40s linear infinite;
-}
-@keyframes desplazar{
-    0% {
-        transform: translateX(0);
-    }
-    100% {
-        transform: translateX(-50%);
-    }
-}
-.catalogo-principal{
-    display: grid;
-    grid-template-columns: repeat(4, 1fr);
-    grid-template-rows: repeat(3, 60ex);
-    justify-items: center;
-    align-items: center;
-}
-@media (max-width: 768px){
-    .catalogo-principal{
-        grid-template-columns: 1fr;
-        margin-top: 10vh;
-        grid-gap: 3vh;
-    }
-    .imagen{
-        width: 49ex;
-        height: 49ex;
-    }
-    .slider{
-        animation:desplazar 20s linear infinite;
-    }
-}
-/*contacto*/
-.informacion-tienda{
-    display: flex;
-    flex-direction: row;
-    align-items: flex-start;
-   gap: 20px;
-}
-.redes-sociales{
-    flex: 1;
-}
-.mapa-tienda{
-    display: flex;
-    flex-direction: column;
-    align-items: flex-start;
-    margin-right: 7vw;
-}
-.mapa{
-    height: 30vh;
-    width: 30vw;
-    border: 3px;
-    border-radius: 10px;
-}
-
-.icono{
-    width: 2vw;
-    height: 4vh;
-    margin: 1vh;
-}
-.red{
-    margin: 3vh 0;
-    padding: 10px;
-    font-size: 35px;
-}
-.red:hover{
-    background-color: aliceblue;
-    border-radius: 6px;
-    border: 1px solid black;
-    transition: 0.5s;
-}
-.libro-de-quejas{
-    display: flex;
-    flex-direction: column;
-   gap: 20px;
-}
-.formulario{
-    display: flex;
-    flex-direction: column;
-    align-items: flex-start;
-    margin-left: 7vw;
-    font-size: 20px;
-}
-.libro{
-    display: flex;
-    align-items: center;
-    gap: 10px;
-    width: 30vw;
-    height: 7vh; 
-}
-.boton-formulario{
-    background-color: aliceblue;
-  padding: 5px 10px;
-  border: none;
-  border-radius: 25px;
-  cursor: pointer;
-  border: 3px solid black;
-  box-shadow: 5px 5px 0px black;
-  margin-right: 3%;
-  font-size: 25px;
-  width: 17vw;
-  text-align: center;
-  display: inline-block;
-  margin-top: 4vh;
-}
-.boton-formulario:active{
-    box-shadow: none;
-    transform: translate(5px, 5px);
-}
-@media (max-width: 768px) {
-    .informacion-tienda{
-        flex-direction: column;
-        align-items: center;
-        justify-content: center;
-    }
-    .redes-sociales{
-        flex: 0;
-    }
-    .icono{
-        width: 7vw;
-        height: 5vh;
-    }
-    .mapa-tienda{
-        margin-right: 0;
-        margin-bottom: 2vh;
-    }
-    .mapa{
-        width: 95vw;
-    }
-    .red{
-        font-size: 20px;
-    }
-    .libro-de-quejas{
-        margin-top: 1vh;
-    }
-    .descripcion{
-        font-size: 25px;
-    }
-    .libro{
-        width: 89vw;
-    }
-    .boton-formulario{
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        padding: 1vh 10vw;
-        margin-top: 2vh;
-    }
-}
-/*carrito*/
-.carrito {
-    width: 100%;
-    border-collapse: collapse;
-    background: white;
-    border-radius: 5px;
-    box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
-}
-.carrito-head {
-    background-color: #4CAF50;
-    color: white;
-}
-.carrito th, .carrito td {
-    padding: 10px;
-    text-align: left;
-    border-bottom: 1px solid #ddd;
-}
-    
-.compra{
-    background-color: aliceblue;
-    padding: 15px 30px;
-    border: none;
-    border-radius: 25px;
-    cursor: pointer;
-    border: 3px solid black;
-    box-shadow: 5px 5px 0px black;
-    margin-left: 5%;
-    margin-right: 3% ;
-    font-size: 25px;
-    width: 17vw;
-}
-.compra:active{
-    box-shadow: none;
-    transform: translate(5px, 5px);
-}
-.total{
-    display: flex;
-    justify-content: end;
-    margin: 5%;
-}
-@media (max-width: 768px){
-    .total{
-        display: flex;
-        align-items: center;
-        justify-content: center;
-    }
-    .compra{
-        width: 55vw;
-    }
-    .monto{
-        display: flex;
-        align-items: center;
-        flex-direction: row;
-    }
-    .texto-button{
-        display: flex;
-        align-items: center;
-        flex-direction: row;
-    }
-    .carrito-body{
-        height: 30vh;
-    }
-    .carrito{
-        margin-top: 2vh;
-    }
-}
-    
-
-/*footer*/
-footer{
-    background-color: darkgreen;
-    padding: 10px 30px;
-    position: relative;
-    margin-top: 10%;
-   
-}
-.copy{
-    background-color: aliceblue;
-    padding: 30px 10px;
-    margin-top: 3vh;
-}
-.logo{
-    width: 30px;
-    height: auto; 
-    
-}
-.info{
-   display:flex;
-    align-items: center;
-    justify-content: space-between; 
-    margin-top: 4vh;
-    width: 100%;
-}
-.e-mail{
-    display: flex;
-    align-items: center;
-    gap: 10px;
-    width: 30vw;
-    height: 7vh;
-}
-.otras-redes{
-    display: flex;
-    justify-content: center;
-    margin-left: 12vw;
-}
-.redes{
-    display: flex;
-    justify-content:end;
-    margin: 0 1vw;
-    padding: 15px;
-}
-.redes:hover{
-    background-color: aliceblue;
-    border-radius: 6px;
-    border: 1px solid black;
-    transition: 0.5s;
-}
-.recibir-oferta{
-   white-space: nowrap;
-   padding: 1vw 1vh;
-    font-size: 30px;
-}
-@media (max-width: 768px){
-    .info{
-        flex-direction: column;
-        justify-content: center;
-        align-items: center;
-        
-    }
-    .otras-redes{
-        margin-left: 0;
-    }
-    .e-mail{
-        width: 95vw;
-    }
-    .recibir-oferta{
-        display: flex;
-        justify-content: center;
-    }
-}
+@use "./layout/header";
+@use "./layout/main";
+@use "./layout/index";
+@use "./layout/contacto";
+@use "./layout/carrito";
+@use "./layout/footer";
+@use "./layout/base";
