--- a/scss/layout/_main.scss
+++ b/scss/layout/_main.scss
@@ -16,9 +16,7 @@
     border: 2px solid black;
     border-radius: 5%;
     background-color: rgb(3, 149, 3) ;
-    
 }
-
 .titulos{
     font-size: 50px;
     padding: 20px ; 
@@ -27,10 +25,8 @@
     width: 40ex;
     height: 40ex;
     border-radius: 5%;
-    
 }
 .texto{
-    
     font-size: 20px;
     padding-left: 7px;
 }
@@ -85,16 +81,21 @@
     .producto{
         display: flex;
         justify-content: center;
-        width: 81%;
+        width: 86.3%;
         margin: 0;
+        
+    }
+    .contenedor-imagen{
+        width: 100%;
+        
     }
     .titulos{
         font-size: 35px;
         padding: 1vw 1vh;
     }
     .imagen{
-        width: 49ex;
-        height: 49ex;
+        width: 30vw;
+        height: 30vw;
     }
     .texto{
         font-size: 25px;
