--- a/scss/layout/utilidades/_extend.scss
+++ b/scss/layout/utilidades/_extend.scss
@@ -24,3 +24,8 @@
     justify-items: center;
     align-items: center;
 }
+%fondo-cards{
+    border: 2px solid black;
+    border-radius: 5%;
+    background-color: rgb(3, 149, 3) ;
+}
