--- a/css/styles.css
+++ b/css/styles.css
@@ -140,6 +140,18 @@
   align-items: center;
 }
 
+.catalogo .producto {
+  border: 2px solid black;
+  border-radius: 5%;
+  background-color: rgb(3, 149, 3);
+}
+
+.catalogo .producto .imagen {
+  width: 40ex;
+  height: 40ex;
+  border-radius: 5%;
+}
+
 .gif {
   display: flex;
   justify-content: right;
@@ -149,21 +161,9 @@
   padding-top: 2%;
 }
 
-.producto {
-  border: 2px solid black;
-  border-radius: 5%;
-  background-color: rgb(3, 149, 3);
-}
-
 .titulos {
   font-size: 50px;
   padding: 20px;
-}
-
-.imagen {
-  width: 40ex;
-  height: 40ex;
-  border-radius: 5%;
 }
 
 .texto {
@@ -218,19 +218,21 @@
   .producto {
     display: flex;
     justify-content: center;
-    width: 86.3%;
+    width: 80vw;
+    height: 55vh;
     margin: 0;
   }
-  .contenedor-imagen {
+  .producto .contenedor-imagen {
     width: 100%;
+    height: 80%;
+  }
+  .producto .contenedor-imagen .imagen {
+    width: 100%;
+    height: 100%;
   }
   .titulos {
     font-size: 35px;
     padding: 1vw 1vh;
-  }
-  .imagen {
-    width: 30vw;
-    height: 30vw;
   }
   .texto {
     font-size: 25px;
@@ -259,34 +261,6 @@
     margin: 2vh 3vh;
   }
 }
-.imagen-slider {
-  width: 40ex;
-  height: 40ex;
-  border-radius: 5%;
-}
-
-.contenedor-slider {
-  width: 100vw;
-  overflow: hidden;
-  display: flex;
-}
-
-.slider {
-  display: flex;
-  gap: 10px;
-  padding: 10px;
-  width: max-content;
-  animation: desplazar 40s linear infinite;
-}
-
-@keyframes desplazar {
-  0% {
-    transform: translateX(0);
-  }
-  100% {
-    transform: translateX(-50%);
-  }
-}
 .catalogo-principal {
   display: grid;
   grid-template-columns: repeat(4, 1fr);
@@ -295,15 +269,69 @@
   align-items: center;
 }
 
+.catalogo-principal .producto-principal {
+  border: 2px solid black;
+  border-radius: 5%;
+  background-color: rgb(3, 149, 3);
+}
+
+.contenedor-slider {
+  width: 100vw;
+  overflow: hidden;
+  display: flex;
+}
+.contenedor-slider .slider {
+  display: flex;
+  gap: 10px;
+  padding: 10px;
+  width: max-content;
+  animation: desplazar 40s linear infinite;
+}
+.contenedor-slider .slider .producto-slider {
+  border: 2px solid black;
+  border-radius: 5%;
+  background-color: rgb(3, 149, 3);
+}
+.contenedor-slider .slider .producto-slider .imagen-slider {
+  width: 40ex;
+  height: 40ex;
+  border-radius: 5%;
+}
+@keyframes desplazar {
+  0% {
+    transform: translateX(0);
+  }
+  100% {
+    transform: translateX(-50%);
+  }
+}
+
+.catalogo-principal .producto-principal .imagen-principal {
+  width: 40ex;
+  height: 40ex;
+  border-radius: 5%;
+}
+
 @media (max-width: 768px) {
   .catalogo-principal {
     grid-template-columns: 1fr;
     margin-top: 10vh;
-    grid-gap: 3vh;
+    grid-gap: 5vh;
   }
-  .imagen {
-    width: 49ex;
-    height: 49ex;
+  .producto-principal {
+    display: flex;
+    justify-content: center;
+    width: 80vw;
+    height: 55vh;
+    margin: 0;
+  }
+  .producto-principal .contenedor-imagen {
+    width: 100%;
+    height: 80%;
+  }
+  .producto-principal .contenedor-imagen .imagen-principal {
+    width: 100%;
+    height: 47ex;
   }
   .slider {
     animation: desplazar 20s linear infinite;
