--- a/scss/layout/_index.scss
+++ b/scss/layout/_index.scss
@@ -2,55 +2,83 @@
 @import "./utilidades/variables";
 @import "./utilidades/extend";
 
-.imagen-slider {
-    width: 40ex;
-    height: 40ex;
-    border-radius: 5%;
-}
+
 
 .contenedor-slider {
     width: 100vw;
     overflow: hidden; 
     display: flex;
-    
-}
 
-.slider {
+    .slider {
     display: flex;
     gap: 10px;
     padding: 10px;
     width: max-content;
     animation: desplazar 40s linear infinite;
+
+        .producto-slider{
+            border: 2px solid black;
+            border-radius: 5%;
+            background-color: rgb(3, 149, 3) ;
+        
+            .imagen-slider{
+                width: 40ex;
+                height: 40ex;
+                border-radius: 5%;
+            }
+        }
+    }
+    @at-root{
+       @keyframes desplazar {
+            0% {
+                transform: translateX(0);
+            }
+            100% {
+                transform: translateX(-50%);
+            }
+        }
+    }
 }
 
-@keyframes desplazar {
-    0% {
-        transform: translateX(0);
-    }
-    100% {
-        transform: translateX(-50%);
-    }
-}
+.catalogo-principal{
+    @extend %grid-catalogo;
 
-.catalogo-principal {
-    display: grid;
-    grid-template-columns: repeat(4, 1fr);
-    grid-template-rows: repeat(3, 60ex);
-    justify-items: center;
-    align-items: center;
+    .producto-principal{
+    @extend %fondo-cards;
+    
+    .imagen-principal{
+        width: 40ex;
+        height: 40ex;
+        border-radius: 5%;
+        }
+    }
 }
 
 @media (max-width: 768px) {
     .catalogo-principal {
         grid-template-columns: 1fr;
         margin-top: 10vh;
-        grid-gap: 3vh;
+        grid-gap: 5vh;
     }
+    .producto-principal{
+        display: flex;
+        justify-content: center;
+         width: 80vw;
+        height: 55vh;
+        margin: 0;
 
-    .imagen {
-        width: 49ex;
-        height: 49ex;
+         .contenedor-imagen {
+        width: 100%;
+        height: 80%;
+
+            .imagen-principal{
+            width: 100%;
+            height: 47ex;
+            }
+        }
     }
+   
+   
 
     .slider {
         animation: desplazar 20s linear infinite;
