--- a/css/styles.css
+++ b/css/styles.css
@@ -70,10 +70,6 @@
   padding: 15px 30px;
   width: clamp(120px, 17vw, 200px);
   text-align: center;
-  transition: background-color 0.3s ease;
-}
-.boton-carrito:hover {
-  background-color: hsl(276, 62%, 24%);
 }
 @media (max-width: 768px) {
   .barra {
@@ -81,6 +77,7 @@
     flex-direction: column;
     align-items: center;
     padding: 15px;
+    height: 31vh;
   }
   .menu {
     width: 100%;
@@ -88,6 +85,7 @@
     align-items: center;
     text-align: center;
     gap: 10px;
+    margin-bottom: 3vh;
   }
   .enlace-menu {
     font-size: 20px;
@@ -111,13 +109,13 @@
     margin-bottom: 1vh;
   }
 }
-.boton-selector {
+.formulario-main .boton-selector {
   display: flex;
   justify-content: center;
   align-items: center;
 }
 
-.boton-selector {
+.formulario-main .boton-selector {
   background-color: aliceblue;
   border: none;
   border-radius: 25px;
@@ -127,7 +125,7 @@
   font-size: 25px;
 }
 
-.boton-selector:active {
+.formulario-main .boton-selector:active {
   box-shadow: none;
   transform: translate(5px, 5px);
 }
@@ -176,27 +174,30 @@
   margin: 1%;
 }
 
-.selector {
+.formulario-main {
   display: flex;
   justify-content: start;
   align-items: center;
   width: 96vw;
-  flex-wrap: wrap;
   margin-left: 1vw;
 }
-
-.categoria {
+.formulario-main .selector {
+  display: flex;
+  justify-content: start;
+  align-items: center;
+  width: 100%;
+}
+.formulario-main .selector .categoria {
   font-size: 30px;
 }
-
-.valores {
+.formulario-main .selector .valores {
   width: 20vw;
   height: 7vh;
   margin: 0 1vw;
   font-size: 20px;
 }
-
-.boton-selector {
+.formulario-main .boton-selector {
+  margin: 2vh;
   padding: 5px 10px;
   width: 10vw;
   text-align: center;
@@ -204,9 +205,10 @@
 }
 @media (max-width: 768px) {
   .catalogo {
-    grid-template-columns: 1fr;
-    margin-top: 10vh;
-    grid-gap: 3vh;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    gap: 2vh;
   }
   .contenedor-gif {
     display: flex;
@@ -243,22 +245,44 @@
   .subtitulos {
     font-size: 27px;
   }
-  .selector {
-    font-size: 20px;
+  .formulario-main {
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
   }
-  .categoria {
-    font-size: 23px;
+  .formulario-main .selector {
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    margin-left: 4vw;
+    width: 90vw;
   }
-  .valores {
-    width: 30vw;
-    height: 5vh;
-  }
-  .boton-selector {
+  .formulario-main .selector .selector-categoria {
+    width: 100%;
     display: flex;
     justify-content: center;
     align-items: center;
-    padding: 1vh 10vw;
-    margin: 2vh 3vh;
+    margin-top: 2vh;
+  }
+  .formulario-main .selector .selector-categoria .categoria {
+    font-size: 30px;
+  }
+  .formulario-main .selector .selector-categoria .valores {
+    width: 20vh;
+    height: 5vh;
+  }
+  .formulario-main .contenedor-boton-selector {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+    margin: 3vh 0;
+  }
+  .formulario-main .contenedor-boton-selector .boton-selector {
+    width: 50vw;
+    height: 5vh;
+    font-size: 20px;
+    margin: 0;
   }
 }
 .catalogo-principal {
@@ -314,9 +338,11 @@
 
 @media (max-width: 768px) {
   .catalogo-principal {
-    grid-template-columns: 1fr;
-    margin-top: 10vh;
-    grid-gap: 5vh;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    gap: 2vh;
+    margin-top: 5vh;
   }
   .producto-principal {
     display: flex;
@@ -331,7 +357,7 @@
   }
   .producto-principal .contenedor-imagen .imagen-principal {
     width: 100%;
-    height: 47ex;
+    height: 100%;
   }
   .slider {
     animation: desplazar 20s linear infinite;
