--- a/scss/layout/_main.scss
+++ b/scss/layout/_main.scss
@@ -36,40 +36,51 @@
     font-size: 30px;
     margin: 1%
 }
-.selector{
+.formulario-main{
     @include flex-avanzado(start, center);
     width: 96vw;
-    flex-wrap: wrap;
-    margin-left: 1vw;
-}
-.categoria{
-    font-size: 30px;
-}
-.valores{
-    width: 20vw;
-    height: 7vh;
-    margin: 0 1vw;
-    font-size: 20px;
-}
+    margin-left: 1vw; 
+    
 
-.boton-selector{
+    .selector{
+        display: flex;
+        justify-content: start;
+        align-items: center;
+        width: 100%;
+
+        .categoria{
+            font-size: 30px; 
+        } 
+
+        .valores{
+            width: 20vw;
+            height: 7vh;
+            margin: 0 1vw;
+            font-size: 20px;
+        }
+    }
+
+    .boton-selector{
     @extend %flex-basico;
     @extend %boton-basico;
-    
+    margin: 2vh ;
+
     padding: 5px 10px;
     width: 10vw;
     text-align: center;
     display: inline-block;
 
-    &:active{
-        @extend %sombra-boton;
+        &:active{
+            @extend %sombra-boton;
+        }
     }
 }
 @media (max-width: 768px){
     .catalogo{
-        grid-template-columns: 1fr;
-        margin-top: 10vh;
-        grid-gap: 3vh;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        gap: 2vh;
     }
     .contenedor-gif{
         
@@ -96,8 +107,6 @@
             }
         } 
     }
-    
-    
     .titulos{
         font-size: 35px;
         padding: 1vw 1vh;
@@ -112,23 +121,50 @@
     .subtitulos{
         font-size: 27px;
     }
-    .selector{
-        
-        font-size: 20px;
-    }
-    .categoria{
-        font-size: 23px;
-    }
-    .valores{
-        width: 30vw;
-        height: 5vh;
-        
-    }
-    .boton-selector{
-        display: flex;
+    .formulario-main{
+        flex-direction: column;
         justify-content: center;
         align-items: center;
-        padding: 1vh 10vw;
-        margin: 2vh 3vh;
+        .selector{
+            flex-direction: column;
+            justify-content: center;
+            align-items: center;  
+            margin-left: 4vw;
+            width: 90vw;
+            
+            .selector-categoria{
+                width: 100%;
+                display: flex;
+                justify-content: center;    
+                align-items: center;
+                margin-top: 2vh;
+
+                .categoria{
+                
+                font-size: 30px;
+
+                }
+                .valores{
+                    width: 20vh;
+                    height: 5vh;  
+                }
+            }
+            
+        }
+        .contenedor-boton-selector{
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            width: 100%;
+            margin: 3vh 0;
+
+            .boton-selector{
+                width: 50vw;
+                height: 5vh;
+                font-size: 20px;
+                margin: 0;
+            
+            }
+        }
     }
 }
